2006-03-15  Luc Pionchon  <luc.pionchon@nokia.com>

	Cleanup Find toolbar,
	
	* hildon-widgets/hildon-find-toolbar.[ch]
	(hildon_find_toolbar_new): set 'label' parameter const.
	(hildon_find_toolbar_new_with_model): likewise.

	* hildon-widgets/hildon-find-toolbar.c
	(struct _HildonFindToolbarPrivate):
	  changed entry_combo_box type to GtkComboBoxEntry*

	(hildon_find_toolbar_get_list_model): new function, to factor
	member access and casting
	(hildon_find_toolbar_get_entry): likewise.
	(hildon_find_toolbar_apply_filter): removed set_column parameter
	since it was used by only one caller, and made the caller do it
	instead. Removed unnecessary casts.

	(hildon_find_toolbar_find_string): new function.
	(hildon_find_toolbar_history_append): code cleanup. use
	hildon_find_toolbar_find_string.
	
	(hildon_find_toolbar_get_property)
	(hildon_find_toolbar_get_entry)
	(hildon_find_toolbar_init)
	(hildon_find_toolbar_new)
	(hildon_find_toolbar_new_with_model)
	(hildon_find_toolbar_highlight_entry): Removed unnecessary casts
	and changed some of them to use the new convenience functions
	instead.

	(hildon_find_toolbar_highlight_entry): use g_return_if_fail()
	instead of if-check to validate parameter.

	
2006-03-15  Luc Pionchon  <luc.pionchon@nokia.com>

	Cleanup hildon-defines,
	
	* hildon-widgets/hildon-defines.c (hildon_icon_sizes_init) 
	(hildon_change_style_recursive_from_ld): use G_GNUC_EXTENSION macro instead of #ifdef

	(hildon_logical_data_free): new function. Free logical data.
	(hildon_gtk_widget_set_logical_font): store logicalfontstring g_strdup()ed.
	(hildon_gtk_widget_set_logical_color): store logicalcolorstring g_strdup()ed.

	* hildon-widgets/hildon-defines.[ch]
	(hildon_gtk_widget_set_logical_font): use const gchar*
	(hildon_gtk_widget_set_logical_color): likewise.

	* hildon-widgets/hildon-defines.c: 
	(hildoniconsizes): set const
	(hildoninternaliconsizes): set static, renamed 'iis'

	
2006-03-14  Luc Pionchon  <luc.pionchon@nokia.com>
